force-app/main/default/objects/Person_Involved__c/Person_Involved__c.object-meta.xml
<CustomObject>
    <label>Person Involved</label>
    <nameField>
        <displayFormat>PI-{000}</displayFormat>
        <label>Person Involved Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Persons Involved</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>