force-app/main/default/objects/Person_Involved__c/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment</label>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipLabel>Persons Involved</relationshipLabel>
    <relationshipName>Persons_Involved</relationshipName>
    <type>Lookup</type>
</CustomField>