force-app/main/default/objects/Person_Involved__c/fields/Collateral__c.field-meta.xml
<CustomField>
    <fullName>Collateral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collateral</label>
    <referenceTo>Collateral__c</referenceTo>
    <relationshipLabel>Persons Involved</relationshipLabel>
    <relationshipName>Persons_Involved</relationshipName>
    <type>Lookup</type>
</CustomField>