force-app/main/default/objects/Person_Involved__c/fields/Meeting__c.field-meta.xml
<CustomField>
    <fullName>Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meeting</label>
    <referenceTo>Meeting__c</referenceTo>
    <relationshipLabel>Persons Involved</relationshipLabel>
    <relationshipName>Persons_Involved</relationshipName>
    <type>Lookup</type>
</CustomField>