force-app/main/default/objects/Person_Involved__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notes</label>
    <referenceTo>Notes__c</referenceTo>
    <relationshipLabel>Persons Involved</relationshipLabel>
    <relationshipName>Persons_Involved</relationshipName>
    <type>Lookup</type>
</CustomField>