force-app/main/default/objects/Person_Involved__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Persons Involved</relationshipLabel>
    <relationshipName>Persons_Involved</relationshipName>
    <type>Lookup</type>
</CustomField>