force-app/main/default/objects/Person_Involved__c/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Persons Involved</relationshipLabel>
    <relationshipName>Persons_Involved</relationshipName>
    <type>Lookup</type>
</CustomField>