force-app/main/default/objects/Person_Involved__c/fields/Visitation_Log__c.field-meta.xml
<CustomField>
    <fullName>Visitation_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visitation Log</label>
    <referenceTo>Visitation_Log__c</referenceTo>
    <relationshipLabel>Persons Involved</relationshipLabel>
    <relationshipName>Persons_Involved</relationshipName>
    <type>Lookup</type>
</CustomField>